--- a/src/assets/styles/css/main.css
+++ b/src/assets/styles/css/main.css
@@ -236,19 +236,19 @@ details, summary {
       display: -ms-flexbox;
       display: flex; }
       /* line 32, ../scss/layout/header/header.scss */
-      .header__inner .header__info p {
+      .header__inner .header__info a, .header__inner .header__info p {
         max-width: 130px;
         font-family: 'Lusitana', serif;
         font-size: 18px;
         line-height: 24px;
         color: #393939; }
-        /* line 39, ../scss/layout/header/header.scss */
-        .header__inner .header__info p:first-child {
-          margin-right: 45px; }
-        @media (max-width: 768px) {
-          /* line 43, ../scss/layout/header/header.scss */
-          .header__inner .header__info p:nth-child(2) {
-            display: none; } }
+      @media (max-width: 768px) {
+        /* line 40, ../scss/layout/header/header.scss */
+        .header__inner .header__info p {
+          display: none; } }
+      /* line 46, ../scss/layout/header/header.scss */
+      .header__inner .header__info a {
+        margin-right: 45px; }
     /* line 51, ../scss/layout/header/header.scss */
     .header__inner .menu-btn {
       font-family: 'Prompt', sans-serif;
@@ -267,7 +267,7 @@ details, summary {
           .header__inner .menu-btn:hover {
             color: #191919; } }
     /* line 70, ../scss/layout/header/header.scss */
-    .header__inner .menu-btn.is-active, .header__inner .header__info.is-active p {
+    .header__inner .menu-btn.is-active, .header__inner .header__info.is-active a, .header__inner .menu-btn.is-active, .header__inner .header__info.is-active p {
       color: whitesmoke; }
     /* line 74, ../scss/layout/header/header.scss */
     .header__inner .menu-btn.is-active:hover {
@@ -351,7 +351,7 @@ details, summary {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: calc(100vh - 48px);
+  height: 100vh;
   width: 100%; }
 
 /* line 152, ../scss/layout/header/header.scss */
