--- a/src/assets/styles/scss/layout/header/header.scss
+++ b/src/assets/styles/scss/layout/header/header.scss
@@ -29,22 +29,22 @@
     .header__info {
       display: flex;
 
-      p {
+      a, p {
         max-width: 130px;
         font-family: 'Lusitana', serif;
         font-size: 18px;
         line-height: 24px;
         color: $secondary;
-
-        &:first-child {
-          margin-right: 45px;
         }
 
-        &:nth-child(2) {
-          @include media-mobile {
-            display: none;
-          }
+      p {
+        @include media-mobile {
+          display: none;
         }
+      }
+
+      a {
+        margin-right: 45px;
       }
     }
 
@@ -67,7 +67,7 @@
       }
     }
 
-    .menu-btn.is-active, .header__info.is-active p {
+    .menu-btn.is-active, .header__info.is-active a, .menu-btn.is-active, .header__info.is-active p {
       color: $background-color;
     }
 
@@ -145,7 +145,7 @@
 .nav-wrapper {
   @include flex-justify(center);
   flex-direction: column;
-  height: calc(100vh - 48px);
+  height: 100vh;
   width: 100%;
 }
 
