--- a/src/assets/styles/scss/general/general.scss
+++ b/src/assets/styles/scss/general/general.scss
@@ -41,10 +41,18 @@
     padding-top: 50px;
 
     &__item {
+      @include flex-justify(space-between);
       margin-bottom: 100px;
-      padding-left: 35px;
       position: relative;
       transition: opacity 0.2s;
+
+      @include media-tablet {
+        flex-direction: column;
+      }
+
+      @include media-mobile {
+        padding-left: 0;
+      }
 
       &:after {
         content: '01.';
@@ -53,6 +61,15 @@
         top: 25px;
         font-size: 15px;
         opacity: 0.5;
+
+        @include media-mobile {
+          font-size: 12px;
+          top: 10px;
+        }
+      }
+
+      &:hover .projects__preview {
+        display: block;
       }
 
       &:nth-child(2) {
@@ -92,6 +109,12 @@
       font-size: 50px;
       font-weight: 300;
       line-height: 50px;
+
+      @include media-mobile {
+        font-size: 29px;
+        line-height: 29px;
+        padding-left: 24px;
+      }
     }
 
     &__subtitle {
@@ -100,22 +123,44 @@
       opacity: 0.5;
       font-size: 17px;
       font-weight: 300;
+
+      @include media-mobile {
+        font-size: 12px;
+        margin-top: 0;
+      }
     }
 
     .projects__preview {
       position: fixed;
       z-index: -1;
-      width: 375px;
-      height: 250px;
-      opacity: 1;
-      transform: translate(-50%, -50%);
-      pointer-events: none;
-      transition: opacity 0.2s;
+      right: -48px;
+      top: 50%;
+      display: none;
+      max-width: 960px;
+      height: 580px;
+      transform: translate(0%, -50%);
 
-        img {
-          width: 100%;
-          height: 100%;
-        }
+      @include media-tablet {
+        position: unset;
+        display: block;
+        z-index: 1;
+        transform: none;
+        max-width: 700px;
+        height: 400px;
+        margin-top: 40px;
+      }
+
+      @include media-mobile {
+        max-width: 400px;
+        height: 200px;
+        margin-top: 15px;
+      }
+
+      img {
+        width: 100%;
+        height: 100%;
+        transition: opacity 0.5s linear 0.2s;
+      }
     }
   }
 }
