--- a/src/assets/styles/css/main.css
+++ b/src/assets/styles/css/main.css
@@ -10,6 +10,7 @@
 html, body {
   width: 100%;
   margin: 0;
+  scroll-behavior: auto;
 }
 
 body {
@@ -605,8 +606,8 @@ details, summary {
   right: -48px;
   top: 50%;
   display: none;
-  max-width: 960px;
-  height: 580px;
+  max-width: 860px;
+  height: 380px;
   transform: translate(0%, -50%);
   box-shadow: 1px 1px 9px 0px rgba(0, 0, 0, 0.51);
   -webkit-box-shadow: 1px 1px 9px 0px rgba(0, 0, 0, 0.51);
