--- a/src/assets/styles/scss/layout/layout.scss
+++ b/src/assets/styles/scss/layout/layout.scss
@@ -13,15 +13,19 @@ html, body {
 }
 
 body {
-  position: relative;
   font-family: 'Prompt', sans-serif;
   font-size: 15px;
   font-weight: 400;
   color: #191919;
   background-color: $background-color;
-  min-height: 100vh;
   cursor: none;
   isolation: isolate;
+}
+
+.inner {
+  height: 100vh;
+  width: 100%;
+  overflow-y: scroll;
 }
 
 a, button, input, select {
