--- a/src/assets/styles/scss/main.css
+++ b/src/assets/styles/scss/main.css
@@ -14,15 +14,19 @@ html, body {
 }
 
 body {
-  position: relative;
   font-family: "Prompt", sans-serif;
   font-size: 15px;
   font-weight: 400;
   color: #191919;
   background-color: rgb(245, 245, 245);
-  min-height: 100vh;
   cursor: none;
   isolation: isolate;
+}
+
+.inner {
+  height: 100vh;
+  width: 100%;
+  overflow-y: scroll;
 }
 
 a, button, input, select {
